--- a/ckanext/os/public/css/map_search.css
+++ b/ckanext/os/public/css/map_search.css
@@ -58,3 +58,7 @@ div.olMap {
 select#selectGaz { 
   margin-top: 5px;
 }
+
+#wrapper-thinner {
+  width: 935px;
+}
